--- a/templates/sidebar/reviewer_sidebar.html
+++ b/templates/sidebar/reviewer_sidebar.html
@@ -1,85 +1,23 @@
 <!-- Dashboard -->
 <li class="nav-item">
   <a href="{% url 'reviewer:dashboard' %}" class="nav-link">
-    <i class="fas fa-tachometer-alt nav-icon"></i>
+    <i class="fas fa-home nav-icon"></i>
     <p>Dashboard</p>
   </a>
 </li>
 
-<!-- Articles to Review -->
-<li class="nav-item has-treeview">
-  <a href="#" class="nav-link">
-    <i class="fas fa-tasks nav-icon"></i>
-    <p>
-      Articles to Review
-      <i class="fas fa-angle-left right"></i>
-    </p>
-  </a>
-  <ul class="nav nav-treeview">
-    <li class="nav-item">
-      <a href="{% url 'reviewer:normal-user-index' %}" class="nav-link">
-        <i class="far fa-circle nav-icon"></i>
-        <p>All Articles</p>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link" onclick="filterArticles('under-review')">
-        <i class="far fa-circle nav-icon"></i>
-        <p>Under Review</p>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link" onclick="filterArticles('accepted')">
-        <i class="far fa-circle nav-icon"></i>
-        <p>Accepted</p>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link" onclick="filterArticles('rejected')">
-        <i class="far fa-circle nav-icon"></i>
-        <p>Rejected</p>
-      </a>
-    </li>
-  </ul>
-</li>
-
-<!-- Review Tools -->
-<li class="nav-item has-treeview">
-  <a href="#" class="nav-link">
-    <i class="fas fa-tools nav-icon"></i>
-    <p>
-      Review Tools
-      <i class="fas fa-angle-left right"></i>
-    </p>
-  </a>
-  <ul class="nav nav-treeview">
-    <li class="nav-item">
-      <a href="#" class="nav-link">
-        <i class="far fa-circle nav-icon"></i>
-        <p>Feedback Templates</p>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">
-        <i class="far fa-circle nav-icon"></i>
-        <p>PDF Annotation</p>
-      </a>
-    </li>
-  </ul>
-</li>
-
-<!-- Reports -->
+<!-- Pending Reviews -->
 <li class="nav-item">
-  <a href="#" class="nav-link">
-    <i class="fas fa-chart-line nav-icon"></i>
-    <p>Review Reports</p>
+  <a href="{% url 'reviewer:pending-reviews' %}" class="nav-link">
+    <i class="fas fa-tasks nav-icon"></i>
+    <p>Pending Reviews</p>
   </a>
 </li>
 
 <!-- Profile -->
 <li class="nav-item">
   <a href="{% url 'update_reviewer_profile' %}" class="nav-link">
-    <i class="fas fa-user-circle nav-icon"></i>
+    <i class="fas fa-user nav-icon"></i>
     <p>My Profile</p>
   </a>
 </li>
