--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -291,8 +291,8 @@
 {% endblock %}
 
 {% block main_content %}
-<div class="content">
-    <div class="container-fluid py-4">
+<div class="content" style="max-width: 100%; overflow-x: hidden;">
+    <div class="container-fluid py-4" style="max-width: 100%; padding-left: 1rem; padding-right: 1rem;">
         <!-- Page Header -->
         <div class="page-header">
             <h1 class="page-title">Administrator Panel</h1>
