--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -125,8 +125,8 @@
 
 {% block main_content %}
 <!-- Dashboard Header -->
-<div class="dashboard-header">
-    <div class="container-fluid">
+<div class="dashboard-header" style="max-width: 100%; overflow-x: hidden;">
+    <div class="container-fluid" style="max-width: 100%; padding-left: 1rem; padding-right: 1rem;">
         <h1><i class="fas fa-tachometer-alt"></i> Dashboard</h1>
         <p class="mb-0">Welcome back, {{ request.user.username }}!</p>
     </div>
