--- a/templates/editor_dashboard.html
+++ b/templates/editor_dashboard.html
@@ -71,8 +71,8 @@
 {% endblock %}
 
 {% block main_content %}
-<div class="content">
-    <div class="container-fluid py-4">
+<div class="content" style="max-width: 100%; overflow-x: hidden;">
+    <div class="container-fluid py-4" style="max-width: 100%; padding-left: 1rem; padding-right: 1rem;">
         <h1 class="page-title">Editor Dashboard</h1>
         <p class="page-subtitle">Manage submissions, assign reviewers, and make editorial decisions</p>
 
